--- a/files/189.html
+++ b/files/189.html
@@ -82,10 +82,10 @@
 	<a href="#top" class="linkA"><p style="color:black;text-align:center" id="bottom">Go Back to Top</p></a>
 	<a href="../files/copyright.html"><div class="sprite center"></div></a>
 	<nav>
-		<a href="#" style="color:#ff6b63" id="111">Episode 111</a>
-		<a href="../files/189.html" style="color:#333333" id="189">Episode 189</a>
-		<a href="../files/189.html" style="color:#ff6b63" id="204">Episode 204</a>
-		<a href="#" style="color:#ff6b63" id="2242">Episode 242</a>
+		<a href="../files/111.html" style="color:#ff6b63" id="111">Episode 111</a>
+		<a href="#" style="color:#333333" id="189">Episode 189</a>
+		<a href="../files/204.html" style="color:#ff6b63" id="204">Episode 204</a>
+		<a href="../files/242.html" style="color:#ff6b63" id="2242">Episode 242</a>
 	</nav>
 	<div id="div" style="margin-left:46.5%"><a href="https://twitter.com/gintamamovie/" id="twt"><div id="div1"></div></a></div>
 	<div id="div2"><a href="https://www.youtube.com/channel/UCFyBWO9SUQfKpuV7uF8Rh5A" id="yt"><div id="div3"></div></a></div>
