--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</div>
 		</a>
 		
-		<a href="#" style="display:inline">
+		<a href="files/242.html" style="display:inline">
 			<div class="container">
 				<img src="images/242-3.png" alt="episode 242" class="image" id="e4">
 				<div class="overlay">
@@ -138,13 +138,11 @@
 	<br><br>
 	
 	<h1 align=center>Gintama: The Final</h1>
-	<p style="margin-left:30px;margin-right:auto;">Last October 10, 2020, during Sakata Gintoki's birthday, the trailer for the final movie, which will be released on January 8 in Japan next year, was released,
-	along with the movie poster. This movie will wrap up the manga, since the anime finished last 2018, when 
-	the manga wasn't finished yet.</p>
+	<p style="margin-left:30px;margin-right:auto;">NEXT WEEK NA JUD HUHUHU  (01/04/2020)</p>
 	<div align="center">
 		<img src="images/movieposter.jpg" width="30%" height="auto" style="display:inline-block;left:30">
 		<figure style="display:inline-block;padding-bottom:130px">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/38GhWY-cLtQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/H61PB6vMbos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<figcaption>
 				<a href="https://wwws.warnerbros.co.jp/gintamamovie/" class="linkA">Click here to go to the movie's webpage</a>
 			</figcaption>
