--- a/files/242.html
+++ b/files/242.html
@@ -15,7 +15,7 @@
 	<img src="../images/242-header.png" alt="header" class="backLayer" id="top">
 	
 	<div class="sticky">
-		<a href="../home.html">
+		<a href="../index.html">
 			<img src="../images/logo.png" width="7%" height="auto" class="right" style="background-position:right;margin-top:50px">
 		</a>
 	</div>
