--- a/files/242.html
+++ b/files/242.html
@@ -24,7 +24,7 @@
 		<h1 style="font-size:90px;margin-top: 93px; color:#333333">Episode 242</h1>
 		<p style="font-size:15px;margin-top:-55px;color:#ff6b63;margin-right:75px">
 			<b>
-				Girls like Vegeta, Guys like Piccolo<br>
+				Girls like Vegeta, Guys like Piccolo.<br>
 				女はベジータ好き 男はピッコロ好き
 			</b>
 		</p>
